# GoogleTest_Demo

./: CMakeLists.txt  README.md  hello_test.cc
test/: hello_test.cc  test_main.cc
